[tool.poetry]
name = "integrations-engineering-code-assessment"
version = "0.1.0"
description = "Async Python project for bidirectional workorder integration between systems"
authors = ["Douglas Kosvoski <douglas.contactpro@gmail.com>"]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
python-decouple = "3.8"
loguru = "^0.7.2"
motor = "^3.1.1"            # Async MongoDB driver

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"       # Coverage reporting
mongomock = "^4.1.2"        # MongoDB mock for testing

[tool.poetry.group.formatting.dependencies]
black = "^23.3.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | _build
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]